# slimefarm

./: .gitignore  BUILD.md  Cargo.toml  MECHANICS.md  README.md  TODO.md  build.sh
.cargo/: config.toml
common/: Cargo.toml
common/src/: actionbuf.rs  arena.rs  bitset.rs  blockbuf.rs  ivec.rs  lib.rs  lua.rs  noise2d.rs  noise3d.rs  slotmap.rs  spread2d.rs  staticinit.rs  terrain.rs  worldgen.rs
common/src/actionbuf/: actions.rs  mod.rs
common/src/lua/: mod.rs  serde.rs
commonmem/: Cargo.toml
commonmem/commonmem_consts/: Cargo.toml
commonmem/commonmem_consts/src/: lib.rs
commonmem/src/: arena.rs  lib.rs
glium/: Cargo.toml
glium/src/buffer/: alloc.rs  mod.rs  view.rs
glium/src/index/: buffer.rs  mod.rs
glium/src/texture/: any.rs  mod.rs
glium/src/vertex/: buffer.rs  mod.rs
glium_text_rusttype/: Cargo.toml  README.md
glium_text_rusttype/src/: lib.rs
glutin/glutin/src/: lib.rs  windowed.rs
glutin/glutin/src/api/egl/: mod.rs
image_dev/: overbars.xcf
lua/: class.lua  enemy.lua  input.lua  keys.lua  main.lua  mesh.lua  models.lua  particles.lua  player.lua  slime.lua  sprite.lua  util.lua  voxel.lua  world.lua  worldgen.lua  worldgen_old.lua
lua/ent/: animal.lua  bullet.lua  checkpoint.lua  entity.lua  firebolt.lua  humanoid.lua  living.lua  player.lua  reg.lua  slimes.lua  slimy.lua
rectpack/: Cargo.toml
rectpack/src/: lib.rs
rectpack/src/packer/: packer.rs
rlua/: Cargo.toml
rlua/crates/rlua-lua51-sys/src/: bindings.rs
rlua/crates/rlua-lua53-sys/src/: bindings.rs
rlua/crates/rlua-lua54-sys/src/: bindings.rs
rlua/src/: context.rs  conversion.rs  error.rs  lib.rs  lua.rs  scope.rs  statics.rs  userdata.rs  util.rs
rlua/tests/: compile-fail.rs
rlua_serde/: Cargo.toml
rlua_serde/src/: de.rs
shader/: basic.frag  basic.vert  dbgchunk.frag  dbgchunk.vert  particle.frag  particle.vert  portal.frag  portal.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  textured.frag  textured.vert
src/: arena.rs  chunkmesh.rs  fastalloc.rs  gen.rs  magicavox.rs  main.rs  mesh.rs  particle.rs  perlin.rs  render.rs  terrain.rs
src/lua/: binpack.rs  gfx.rs  mod.rs
voxel/: chr_knight.vox  firebolt.vox  flag.vox  flag.vox.bak  green_slime.vox  player.vox  player_old.vox  red_slime.vox  slime.vox
worldgen/: Cargo.toml
worldgen/src/: lib.rs  lib_old.rs  serde.rs
worldgen/src/actionbuf/: actions.rs  mod.rs
