[package]
name = "slimefarm"
version = "0.1.0"
authors = ["negamartin <martin.andrighetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29"
rlua = "0.17"
rlua_serde = "0.4"
anyhow = "1"
uv = { package = "ultraviolet", version = "0.7" }
fxhash = "0.2"
rand = "0.8"
rand_xoshiro = "0.6"
crossbeam = "0.8"
parking_lot = "0.11"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
