[package]
name = "slimefarm"
version = "0.1.0"
authors = ["negamartin <martin.andrighetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "common",
    "worldgen",
    "glium_text_rusttype",
    "glium",
    "glutin/glutin",
    "glutin/glutin_egl_sys",
    "glutin/glutin_glx_sys",
    "glutin/glutin_wgl_sys",
    "glutin/glutin_gles2_sys",
    "glutin/glutin_emscripten_sys",
]

[dependencies]
common = { path = "common" }
worldgen = { path = "worldgen" }
glium = { path = "glium", version = "0.29" }
glium_text_rusttype = { path = "glium_text_rusttype" }
rlua = "0.17"
rlua_serde = "0.4"
anyhow = "1"
uv = { package = "ultraviolet", version = "0.8" }
fxhash = "0.2"
rand = "0.8"
rand_xoshiro = "0.6"
crossbeam = "0.8"
parking_lot = "0.11"
num_cpus = "1"
image = { version = "0.23", default-features = false, features = ["png"] }
serde = "1"
serde_json = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.glium]
opt-level = 3
[profile.dev.package.glutin]
opt-level = 3
[profile.dev.package.glium_text_rusttype]
opt-level = 3

[profile.dev.package.common]
opt-level = 3
