[package]
name = "slimefarm"
version = "0.1.0"
authors = ["negamartin <martin.andrighetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "common",
    "worldgen",
    "glium_text_rusttype",
    "glium",
    "glutin/glutin",
    "glutin/glutin_egl_sys",
    "glutin/glutin_glx_sys",
    "glutin/glutin_wgl_sys",
    "glutin/glutin_gles2_sys",
    "glutin/glutin_emscripten_sys",
    "rlua",
    "rlua_serde",
    "commonmem",
    "commonmem/commonmem_consts",
]

[dependencies]
common = { path = "common" }
glium = { path = "glium", version = "0.29" }
glium_text_rusttype = { path = "glium_text_rusttype" }
rlua = { path = "rlua", version = "0.19" }
rlua_serde = { path = "rlua_serde", version = "0.4" }
anyhow = "1"
uv = { package = "ultraviolet", version = "0.8", features = ["f64"] }
fxhash = "0.2" # TODO: Check if aHash would be more appropiate for hash tables
rand = "0.8"
rand_xoshiro = "0.6"
rand_distr = "0.4"
crossbeam = "0.8"
parking_lot = "0.12"
num_cpus = "1"
image = { version = "0.24", default-features = false, features = ["png"] }
serde = "1"
bincode = "1"
notify = "4"
lazysort = "0.2"
libloading = "0.7"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.glium]
opt-level = 3
[profile.dev.package.glutin]
opt-level = 3
[profile.dev.package.glium_text_rusttype]
opt-level = 3

[profile.dev.package.common]
opt-level = 3

[profile.dev]
opt-level = 1
lto = false
incremental = true
