[package]
name = "common"
version = "0.1.0"
authors = ["negamartin <martin.andrighetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fxhash = "0.2"
rand = "0.8"
rand_xoshiro = "0.6"
rand_distr = "0.4"
crossbeam = "0.8"
parking_lot = "0.11"
serde = "1"
serde_derive = "1"
uv = { package = "ultraviolet", version = "0.8", features = ["serde"] }
rlua = "0.18"
