[package]
name = "common"
version = "0.1.0"
authors = ["negamartin <martin.andrighetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
anyhow = "1"
fxhash = "0.2"
rand = "0.8"
rand_xoshiro = "0.6"
crossbeam = "0.8"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
uv = { package = "ultraviolet", version = "0.8", features = ["f64"] }
rlua = { path = "../rlua", version = "0.19" }
commonmem_consts = { path = "../commonmem/commonmem_consts" }
