[package]
name = "rectpack"
version = "0.2.1"
authors = ["kryptan"]
keywords = ["texture", "packer", "sprite", "packing", "atlas"]
description = "A rectangle packing library. Heavily tested with random data to ensure that it always produces correct result."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kryptan/rect_packer.git"
homepage = "https://github.com/kryptan/rect_packer"
documentation = "https://docs.rs/rect_packer/"

[lib]
name = "rectpack"
