[package]
name = "worldgen"
version = "0.1.0"
authors = ["negamartin <martin.andrighetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde_json = "1"
serde = "1"
fxhash = "0.2"
rlua = "0.17"
