[package]
name = "worldgen"
version = "0.1.0"
authors = ["negamartin <martin.andrighetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
serde = "1"
fxhash = "0.2"
rlua = { path = "../rlua", version = "0.19" }
rlua_serde = { path = "../rlua_serde", version = "0.4" }
